# claude-memory-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  APOCALYPSE_README.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAUNTLET_RESULTS.md  LICENSE  MUTATION_REPORT.md  README.md  ROUND_1_BASELINE.md  audit_hammer.txt  audit_polish.txt  audit_pulse.txt  coverage_baseline.txt  coverage_report.txt  debug_output.txt  docker-compose.yml  gate_output.txt  hammer_output.txt  mcp_config.json  ontology.json  polish_output.txt  pulse_output.txt  pyproject.toml  ruff_remaining.txt  test_dynamic_ontology.json  test_inventory_1.txt  test_output.txt  tox.ini  vulture_whitelist.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_INVENTORY.md  DOCS_INDEX.md  DRAGON_BRAIN_GAUNTLET.md  ENHANCEMENT_SPEC.md  GAUNTLET_RESULTS.md  GOTCHAS.md  MAINTENANCE_MANUAL.md  MCP_TOOL_REFERENCE.md  POST_BUILD_FINDINGS.md  REHYDRATION_DOCUMENT.md  RUNBOOK.md  SETUP.md  SPEC-hybrid-search-unification.md  UPGRADE_LOG.md  USER_MANUAL.md  structural_analysis.md  structural_analysis_2026_02_11.md  task.md  walkthrough.md
docs/adr/: 001-hybrid-storage.md  002-service-repository.md  003-python-graph-algos.md  004-observation-vectorization.md  005-associative-search.md  006-gold-stack.md  007-hybrid-search-unification.md
docs/project_history/: dependency_analysis.md  implementation_plan.md  task.md  walkthrough.md
gauntlet_results/: mutants_activation.json  mutants_analysis.json  mutants_clustering.json  mutants_context_manager.json  mutants_crud.json  mutants_crud_maintenance.json  mutants_embedding.json  mutants_graph_algorithms.json  mutants_interfaces.json  mutants_librarian.json  mutants_lock_manager.json  mutants_logging_config.json  mutants_ontology.json  mutants_repository.json  mutants_repository_queries.json  mutants_repository_traversal.json  mutants_router.json  mutants_schema.json  mutants_search_FAILED.json  mutants_server.json  mutants_temporal.json  mutants_tools.json  mutants_tools_extra.json  mutants_vector_store.json
scripts/: README.md  analyze_deps.py  backfill_temporal.py  backup_restore.py  batch_mutation.py  clean_tox.py  cold_run.ps1  cold_test.ps1  debug_data_status.py  debug_pagerank.py  debug_qdrant_count.py  debug_tar.py  docker_cleanup.ps1  download_model.py  e2e_test.py  embed_observations.py  embedding_eval.py  final_check.py  generate_config.py  generate_mutation_report.py  heal_graph.py  healthcheck.ps1  mcp_smoke_test.py  nuke_data.py  probe_algos.py  purge_ghost_vectors.py  recover_graph.py  red_team.py  reset_db.py  run_mcp_server.ps1  run_mutatest.py  scheduled_backup.py  seed.py  setup_scheduled_tasks.ps1  simulate_day.py  simulate_lazy_import.py  start.ps1  validate_brain.py  verify.py  verify_dedup.py  (+5 more)
scripts/internal/: bunker_protocol.bat  embedding_eval.py  eval_dataset.json  eval_results.json  generate_config.py  migrate_vectors.py  purge_ghost_vectors.py  reembed_all.py  reset_db.py  seed.py  simulate_day.py  validate_brain.py  verify.py  verify_dedup.py  verify_mcp_server.py
src/claude_memory/: activation.py  analysis.py  clustering.py  context_manager.py  crud.py  crud_maintenance.py  embedding.py  embedding_server.py  graph_algorithms.py  interfaces.py  librarian.py  lock_manager.py  logging_config.py  merge.py  ontology.py  repository.py  repository_queries.py  repository_traversal.py  retry.py  router.py  schema.py  search.py  search_advanced.py  server.py  stats.py  temporal.py  tools.py  tools_extra.py  vector_store.py
src/dashboard/: app.py
tests/: e2e_functional.py  test_schema.py
tests/gauntlet/: test_concurrent.py  test_contracts.py  test_hypothesis_merge.py  test_invariants.py
tests/unit/: conftest.py  test_activation.py  test_analyze_graph.py  test_archive_vector_cleanup.py  test_backfill_temporal.py  test_backup_restore.py  test_clustering.py  test_consolidate_errors.py  test_context.py  test_coverage_gaps.py  test_crud_split_brain.py  test_dashboard.py  test_dashboard_app.py  test_dynamic_validation.py  test_edge_cases.py  test_embedding_client.py  test_embedding_coverage.py  test_embedding_filter.py  test_embedding_retry.py  test_embedding_server.py  test_entity_lifecycle.py  test_full_workflow.py  test_graph_traversal.py  test_hologram.py  test_hybrid_search.py  test_interfaces.py  test_librarian.py  test_librarian_repro.py  test_list_orphans.py  test_lock_fallback.py  test_locking.py  test_logging_config.py  test_memory_service.py  test_merge.py  test_mutant_clustering.py  test_mutant_config_defaults.py  test_mutant_default_params.py  test_mutant_dict_crud.py  test_mutant_dict_services.py  test_mutant_graph_algorithms.py  (+28 more)
