[project]
name = "claude-memory-mcp"
version = "0.1.0"
description = "Custom MCP server for Claude's Hybrid Memory System"
requires-python = ">=3.12"
dependencies = [
    "graphiti-core>=0.5.0,<1.0.0",
    "falkordb>=1.0.0",
    "mcp>=0.1.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
    "pyvis>=0.3.2",

]

[project.scripts]
claude-memory = "claude_memory.server:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["claude_memory"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "falkordb.*",
    "pyvis.*",
    "streamlit.*",
    "sentence_transformers.*",
    "graphiti_core.*"
]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
